[tool.poetry]
name = "pgaudit-parser"
version = "0.1.0"
description = "PGAudit logs parser library"
authors = ["Mateus Andrade <mateusandrade080@gmail.com>"]
keywords = ["audit", "logs", "PostgreSQL", "PGAudit", "parser"]
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
